# sql-portfolio

./: .gitignore  README.md  pyproject.toml  run.py
data/: generate_data.py
sql/: 00_schema.sql  01_selection.sql  02_dml.sql  03_jointures.sql  04_agregations.sql  05_qualite_donnees.sql
